Remove extra changes